토오글 업뎃
데스

--- a/web/SETTING.html
+++ b/web/SETTING.html
@@ -5,6 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, webkit">
 <title>Untitled Document</title>
+<link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/calendar.css">
     <style type="text/css">
         html {
@@ -73,7 +74,15 @@
       </ul>
     </div><br>
     <div align="center">
-    <label class="panel-info">리모콘 보기</label>
+    리모콘 보기
+    <label class="switch" style="background-color:#000000">
+      <input type="checkbox" class="switch-input">
+      <span class="switch-label" data-on="On" data-off="Off"></span>
+      <span class="switch-handle"></span>
+    </label>
+    </div>
+    <br>
+    
     </div>
 <div class="wall" align="center">
   <div id="ca"></div>
@@ -128,7 +137,6 @@
 </div>
   <br>
     <!-- /.navbar-collapse -->
-  </div>
   <!-- /.container-fluid -->
 </nav>
 <footer class="footer" id="footer" align="right" style="color:#FFFFFF"><br>Three J Two K company</footer>
