--- a/web/MAIN.html
+++ b/web/MAIN.html
@@ -68,7 +68,7 @@
       <ul class="nav navbar-nav navbar-right" style="border-color:#E69B9C">
       <div class="btn-group" role="group">
       <button type="button" class="alert-info" style="margin-right:5px">속도UP</button>
-      <button type="button" class="alert-warning" style="margin-left:5px">설정하기</button>
+      <button type="button" class="alert-warning" style="margin-left:5px" onClick="location='SETTING.html'">설정하기</button>
        </div>
       </ul>
     </div><br>
@@ -134,7 +134,7 @@
   </div>
   <!-- /.container-fluid -->
 </nav>
-<footer class="footer" id="footer" align="right" style="color:#FFFFFF"><br>Three J Two K company</footer>
+<footer class="footer" id="footer" align="right" style="color:#FFFFFF; margin-right:10px"><br>Three J Two K company</footer>
 <script src="js/bootstrap.js" type="text/javascript"></script>
 </body>
 </html>
