--- a/web/ORDER.html
+++ b/web/ORDER.html
@@ -309,7 +309,7 @@
   </div>
  
 </nav>
-<footer class="footer" id="footer" align="right" style="color:#FFFFFF"><br>Three J Two K company</footer>
+<footer class="footer" id="footer" align="right" style="color:#FFFFFF; margin-right:10px"><br>Three J Two K company</footer>
 <script src="js/bootstrap.js" type="text/javascript"></script>
 </body>
 </html>
