--- a/web/ORDERED.html
+++ b/web/ORDERED.html
@@ -196,7 +196,7 @@
   </div>
   <!-- /.container-fluid -->
 </nav>
-<footer class="footer" id="footer" align="right" style="color:#FFFFFF"><br>Three J Two K company</footer>
+<footer class="footer" id="footer" align="right" style="color:#FFFFFF; margin-right:10px"><br>Three J Two K company</footer>
 <script src="js/jquery-1.11.2.min.js" type="text/javascript"></script>
 <script src="js/bootstrap.js" type="text/javascript"></script>
 </body>
