--- a/web/SETTING.html
+++ b/web/SETTING.html
@@ -63,7 +63,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#inverseNavbar1" style="border-color:#ffffff"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-      <a class="navbar-brand" href="#" style="color:#FFFFFF; font-size:24px; text-align:center" onClick="location='MAIN.html'">전김강정조</a></div>
+      <a class="navbar-brand" href="#" style="color:#FFFFFF; font-size:24px; text-align:center" onClick="location='MAIN.html'">홈으로...</a></div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="inverseNavbar1" align="center">
       <ul class="nav navbar-nav navbar-right" style="border-color:#E69B9C">
@@ -73,13 +73,20 @@
        </div>
       </ul>
     </div><br>
-    <div align="center">
-    리모콘 보기
+    <div>
+    <label style="margin-left: 60px; margin-right:100px">리모콘 보기</label>
     <label class="switch" style="background-color:#000000">
       <input type="checkbox" class="switch-input">
       <span class="switch-label" data-on="On" data-off="Off"></span>
       <span class="switch-handle"></span>
-    </label>
+    </label><br>
+    <label style="margin-left: 65px; margin-right:107px">알람 켜기</label>
+     <label class="switch" style="background-color:#000000">
+      <input type="checkbox" class="switch-input">
+      <span class="switch-label" data-on="On" data-off="Off"></span>
+      <span class="switch-handle"></span>
+    </label><br>
+    
     </div>
     <br>
     
@@ -99,8 +106,8 @@
         // inline
         var $ca = $('#ca').calendar({
             // view: 'month',
-            width: 340,
-            height: 300,
+            width: 320,
+            height: 320,
             // startWeek: 0,
             // selectedRang: [new Date(), null],
             data: data,
@@ -135,11 +142,10 @@
     </script>
     <script language="javascript"> </script>
 </div>
-  <br>
-    <!-- /.navbar-collapse -->
+  <!-- /.navbar-collapse -->
   <!-- /.container-fluid -->
 </nav>
-<footer class="footer" id="footer" align="right" style="color:#FFFFFF"><br>Three J Two K company</footer>
+<footer class="footer" id="footer" align="right" style="color:#FFFFFF; margin-right:10px">Three J Two K company</footer>
 <script src="js/bootstrap.js" type="text/javascript"></script>
 </body>
 </html>
