--- a/web/SETTING.html
+++ b/web/SETTING.html
@@ -73,14 +73,75 @@
        </div>
       </ul>
     </div><br>
-    <div>
-    <label style="margin-left: 60px; margin-right:100px">리모콘 보기</label>
+    <div align="center">
+    <label style="margin-left: 10px; margin-right:100px; font-size:16px">리모콘 보기</label>
     <label class="switch" style="background-color:#000000">
       <input type="checkbox" class="switch-input">
       <span class="switch-label" data-on="On" data-off="Off"></span>
       <span class="switch-handle"></span>
     </label><br>
-    <label style="margin-left: 65px; margin-right:107px">알람 켜기</label>
+    <label style="font-size:16px; margin-right:80px">버튼 설정
+    </label><br>
+    <div>
+    <label style="font-size:16px; margin-right:60px; margin-left:80px">1번 버튼
+    </label>
+    <div class="btn-group">
+      <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-expanded="false" style="height: 15px; font-size: 10px; padding-bottom: 18px; border-color: rgba(71,168,216,1.00); width: 70px; padding-right: 68px;">메뉴 고르기
+      <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu" role="menu">
+        <li role="presentation" class="dropdown-header">Dropdown header 1</li>
+        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">First Link</a></li>
+        <li role="presentation" class="disabled"><a role="menuitem" tabindex="-1" href="#">Disabled Link</a></li>
+        <li role="presentation" class="divider"></li>
+        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Separated Link</a></li>
+      </ul>
+    </div>
+    <label style="font-size:16px; margin-right:60px; margin-left:80px">2번 버튼
+    </label>
+    <div class="btn-group">
+      <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-expanded="false" style="height: 15px; font-size: 10px; padding-bottom: 18px; border-color: rgba(71,168,216,1.00); width: 70px; padding-right: 68px;">메뉴 고르기
+      <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu" role="menu">
+        <li role="presentation" class="dropdown-header">Dropdown header 1</li>
+        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">First Link</a></li>
+        <li role="presentation" class="disabled"><a role="menuitem" tabindex="-1" href="#">Disabled Link</a></li>
+        <li role="presentation" class="divider"></li>
+        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Separated Link</a></li>
+      </ul>
+    </div>
+    <label style="font-size:16px; margin-right:60px; margin-left:80px">3번 버튼
+    </label>
+    <div class="btn-group">
+      <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-expanded="false" style="height: 15px; font-size: 10px; padding-bottom: 18px; border-color: rgba(71,168,216,1.00); width: 70px; padding-right: 68px;">메뉴 고르기
+      <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu" role="menu">
+        <li role="presentation" class="dropdown-header">Dropdown header 1</li>
+        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">First Link</a></li>
+        <li role="presentation" class="disabled"><a role="menuitem" tabindex="-1" href="#">Disabled Link</a></li>
+        <li role="presentation" class="divider"></li>
+        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Separated Link</a></li>
+      </ul>
+    </div>
+    <label style="font-size:16px; margin-right:60px; margin-left:80px">4번 버튼
+    </label>
+    <div class="btn-group">
+      <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-expanded="false" style="height: 15px; font-size: 10px; padding-bottom: 18px; border-color: rgba(71,168,216,1.00); width: 70px; padding-right: 68px;">메뉴 고르기
+      <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu" role="menu">
+        <li role="presentation" class="dropdown-header">Dropdown header 1</li>
+        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">First Link</a></li>
+        <li role="presentation" class="disabled"><a role="menuitem" tabindex="-1" href="#">Disabled Link</a></li>
+        <li role="presentation" class="divider"></li>
+        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Separated Link</a></li>
+      </ul>
+    </div>
+    </div>
+<br>
+    <label style="margin-left: 18px; margin-right:106px; font-size:16px">알람 켜기</label>
      <label class="switch" style="background-color:#000000">
       <input type="checkbox" class="switch-input">
       <span class="switch-label" data-on="On" data-off="Off"></span>
