--- a/web/FAVmius.html
+++ b/web/FAVmius.html
@@ -35,16 +35,10 @@
   <div align="center">
     
     <div>
-      <div class="input-group"><span class="input-group-addon">이름</span>
-        <input type="text" class="form-control" placeholder="Write item name">
-      </div>
-      <div class="input-group"><span class="input-group-addon">갯수</span>
-        <input type="number" class="form-control" placeholder="Insert item number">
-        <span class="input-group-addon">EA</span></div>
       <div class="input-group"><span class="input-group-addon">즐겨찾기 이름</span>
         <input type="text" class="form-control" placeholder="Write favorite group">
-        <span class="input-group-addon" style="background-color:rgba(92,184,92,1.00)">
-        <button type="button" class="btn btn-success" style="height: 100%; margin-left: -10px; margin-right: -10px; margin-bottom: -15px; margin-top: -18px; padding-bottom: 20px; font-size:12px; border-color:rgba(92,184,92,1.00);">추가</button>
+        <span class="input-group-addon" style="background-color:rgba(217,83,79,1.00)">
+        <button type="button" class="btn btn-danger" style="height: 100%; margin-left: -10px; margin-right: -10px; margin-bottom: -15px; margin-top: -18px; padding-bottom: 20px; font-size:12px; border-color:rgba(217,83,79,1.00);">삭제</button>
         </span></div>
         <hr>
         <div>
