--- a/web/ORDER.html
+++ b/web/ORDER.html
@@ -38,11 +38,14 @@
     <button class="btn" style="color:#ffffff; background-color:rgba(230,155,156,1.00); border-bottom-color:rgba(230,155,156,1.00)">검색하기</button><br>
     </div>
     <span>
-    <button type="button" class="btn-group-xs">#</button>
-    <button type="button" class="btn btn-info" draggable="true">Button</button>
-    <button type="button" class="btn btn-success" draggable="true">Button</button>
-    <button type="button" class="btn btn-warning" draggable="true">Button</button>
-    <button type="button" class="btn-group-xs" draggable="true">+</button>
+    <button type="button" class="btn btn-ss" style="color:#FFFFFF; background-color:rgba(230,155,156,1.00); border-color:rgba(230,155,156,1.00); width:10%; text-align:center" onClick="location='FAVORITE.html'">#</button>
+    <button type="button" class="btn btn-info" draggable="true" style="width:30%; text-align:center">1</button>
+    <button type="button" class="btn btn-success" draggable="true" style="width:20%; text-align:center">2</button>
+    <button type="button" class="btn btn-warning" draggable="true" style="width:10%; text-align:center">3</button>
+    <button type="button" class="btn btn-ss" style="color:#FFFFFF; background-color:rgba(230,155,156,1.00); border-color:rgba(230,155,156,1.00); width:10%; text-align:center" onClick="location='FAVplus.html'">+</button>
+    <button type="button" class="btn btn-ss" style="color:#FFFFFF; background-color:rgba(230,155,156,1.00); border-color:rgba(230,155,156,1.00); width:10%; text-align:center" onClick="location='FAVmius.html'">-</button>
+    
+    
     </span>
     <hr>
     <div align="center">
