--- a/web/SETTING.html
+++ b/web/SETTING.html
@@ -72,7 +72,7 @@
       <button type="button" class="alert-warning" style="margin-left:5px">설정하기</button>
        </div>
       </ul>
-    </div><br>
+    </div>
     <div align="center">
     <label style="margin-left: 10px; margin-right:100px; font-size:16px">리모콘 보기</label>
     <label class="switch" style="background-color:#000000">
@@ -97,6 +97,7 @@
         <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Separated Link</a></li>
       </ul>
     </div>
+    <br>
     <label style="font-size:16px; margin-right:60px; margin-left:80px">2번 버튼
     </label>
     <div class="btn-group">
@@ -111,6 +112,7 @@
         <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Separated Link</a></li>
       </ul>
     </div>
+    <br>
     <label style="font-size:16px; margin-right:60px; margin-left:80px">3번 버튼
     </label>
     <div class="btn-group">
@@ -125,7 +127,8 @@
         <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Separated Link</a></li>
       </ul>
     </div>
-    <label style="font-size:16px; margin-right:60px; margin-left:80px">4번 버튼
+    <br>
+    <label style="font-size:16px; margin-right:60px; margin-left:77px">4번 버튼
     </label>
     <div class="btn-group">
       <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-expanded="false" style="height: 15px; font-size: 10px; padding-bottom: 18px; border-color: rgba(71,168,216,1.00); width: 70px; padding-right: 68px;">메뉴 고르기
