--- a/web/ORDERED.html
+++ b/web/ORDERED.html
@@ -28,7 +28,7 @@
       <ul class="nav navbar-nav navbar-right" style="border-color:#E69B9C">
       <div class="btn-group" role="group">
       <button type="button" class="alert-info" style="margin-right:5px">속도UP</button>
-      <button type="button" class="alert-warning" style="margin-left:5px">설정하기</button>
+      <button type="button" class="alert-warning" style="margin-left:5px" onClick="location='SETTING.html'">설정하기</button>
        </div>
       </ul>
     </div><br>
