--- a/web/FAVORITE.html
+++ b/web/FAVORITE.html
@@ -22,7 +22,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#inverseNavbar1" style="border-color:#ffffff"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-      <a class="navbar-brand" href="#" style="color:#FFFFFF; font-size:24px; text-align:center" onClick="location='MAIN.html'">홈으로...</a></div>
+      <a class="navbar-brand" href="#" style="color:#FFFFFF; font-size:24px; text-align:center" onClick="location='ORDER.html'">주문으로...</a></div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="inverseNavbar1" align="center">
       <ul class="nav navbar-nav navbar-right" style="border-color:#E69B9C">
