--- a/web/ACCEPT_3.html
+++ b/web/ACCEPT_3.html
@@ -44,8 +44,8 @@
     <div style="width:90%" align="center">
       <label style="color:#FFFFFF; font-size:30px">결재가 완료되었습니다!</label>
     </div>
-    <br><br><br><br><br>
-    <div style="width:90%" align="right">
+    <br><br><br><br><br><br>
+    <div align="right">
     <button type="button" class="btn btn-success" onClick="location='MAIN.html'">메인 페이지로...</button>
     </div>
     <br>
