--- a/web/MAIN.html
+++ b/web/MAIN.html
@@ -73,10 +73,10 @@
       </ul>
     </div><br>
     <div align="center">
-    <button type="button" class="btn btn-primary" style="margin-bottom:5px; width:350px" onClick="location='ORDER.html'">주문 하기</button><br>
-    <button type="button" class="btn btn-info" style="margin-bottom:5px; width:350px" onClick="location='ORDERED.html'">왔던 주문</button><br>
-    <button type="button" class="btn btn-success" style="margin-bottom:5px; width:350px">했던 주문</button><br>
-    <button type="button" class="btn btn-warning" style="margin-bottom:15px; width:350px">내 정보들</button><br>
+    <button type="button" class="btn btn-primary" style="margin-bottom:5px; width:260px" onClick="location='ORDER.html'">주문 하기</button><br>
+    <button type="button" class="btn btn-info" style="margin-bottom:5px; width:260px" onClick="location='ORDERED.html'">왔던 주문</button><br>
+    <button type="button" class="btn btn-success" style="margin-bottom:5px; width:260px">했던 주문</button><br>
+    <button type="button" class="btn btn-warning" style="margin-bottom:15px; width:260px">내 정보들</button><br>
     </div>
 <div class="wall" align="center">
   <div id="ca"></div>
@@ -93,8 +93,8 @@
         // inline
         var $ca = $('#ca').calendar({
             // view: 'month',
-            width: 340,
-            height: 300,
+            width: 260,
+            height: 260,
             // startWeek: 0,
             // selectedRang: [new Date(), null],
             data: data,
@@ -129,12 +129,11 @@
     </script>
     <script language="javascript"> </script>
 </div>
-  <br>
     <!-- /.navbar-collapse -->
   </div>
   <!-- /.container-fluid -->
 </nav>
-<footer class="footer" id="footer" align="right" style="color:#FFFFFF; margin-right:10px"><br>Three J Two K company</footer>
+<footer class="footer" id="footer" align="right" style="color:#FFFFFF; margin-right:10px">Three J Two K company</footer>
 <script src="js/bootstrap.js" type="text/javascript"></script>
 </body>
 </html>
