--- a/web/ORDER.html
+++ b/web/ORDER.html
@@ -235,7 +235,7 @@ function getTextByClone( tag ){
   <table id="cart" class="sortable" width="100%" border="0">
   	<thead>
     	<tr>
-    		<th class="check" style="text-align:center">체크<button class="btn" style="background-color:#E69B9C; font-size:10px; width:4px; padding-left:0px" onclick="reverseTD (0)">▲</button><button class="btn" onclick="reverseTD (0)" style="background-color: #E69B9C; font-size: 10px; width: 4px; padding-left: 0px;">▼</button></th>
+    		<th class="check" style="text-align:center">체크</th>
             <th class="name" style="text-align:center">이름<button class="btn" onclick="sortTD(1)" style="background-color:#E69B9C; font-size:10px; width:4px; padding-left:0px">▲</button><button class="btn" style="background-color:#E69B9C; font-size:10px; width:4px; padding-left:0px" onclick="reverseTD(1)">▼</button></th>
              <th  class="company" style="text-align:center">회사<button class="btn" style="background-color:#E69B9C; font-size:10px; width:4px; padding-left:0px" onclick="sortTD(2)">▲</button><button class="btn" style="background-color:#E69B9C; font-size:10px; width:4px; padding-left:0px"  onclick="reverseTD(2)">▼</button></th>
 			 <th class="number" style="text-align:center">갯수</th>
