--- a/web/ORDER.html
+++ b/web/ORDER.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Untitled Document</title>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
