--- a/web/ORDER.html
+++ b/web/ORDER.html
@@ -45,8 +45,8 @@
     <button type="button" class="btn btn-warning" draggable="true" style="width:10%; text-align:center">3</button>
     <button type="button" class="btn btn-ss" style="color:#FFFFFF; background-color:rgba(230,155,156,1.00); border-color:rgba(230,155,156,1.00); width:10%; text-align:center" onClick="location='FAVplus.html'">+</button>
     <button type="button" class="btn btn-ss" style="color:#FFFFFF; background-color:rgba(230,155,156,1.00); border-color:rgba(230,155,156,1.00); width:10%; text-align:center" onClick="location='FAVmius.html'">-</button>
+    <button class="glyphicon glyphicon-star" aria-hidden="true" style="color:#FFFFFF; background-color:rgba(230,155,156,1.00); border:hidden" onClick="location='FAVORITE.html'"></button>
     </span>
-    
   <!------- ---->
   <hr>
     <div align="center">
