--- a/web/FAVORITE.html
+++ b/web/FAVORITE.html
@@ -50,7 +50,7 @@
       </div>
       <div class="btn-group" role="group" align="center" style="width:100%">
         <button type="button" class="btn btn-primary" style="width:20%">primary</button>
-        <button type="button" class="btn btn-info" style="width:20%; border-radius:15px">info</button>
+        <button type="button" class="btn btn-info" style="width:20%">info</button>
         <button type="button" class="btn btn-success" style="width:20%">success</button>
         <button type="button" class="btn btn-warning" style="width:20%">warning</button>
         <button type="button" class="btn btn-danger" style="width:20%">danger</button>
