--- a/web/MAIN.html
+++ b/web/MAIN.html
@@ -77,8 +77,8 @@
     </div><br>
     <div align="center">
     <button type="button" class="btn btn-primary" style="margin-bottom:5px; width:260px" onClick="location='ORDER.html'">주문 하기</button><br>
-    <button type="button" class="btn btn-info" style="margin-bottom:5px; width:260px" onClick="location='ORDERED.html'">왔던 주문</button><br>
-    <button type="button" class="btn btn-success" style="margin-bottom:5px; width:260px">했던 주문</button><br>
+    <button type="button" class="btn btn-info" style="margin-bottom:5px; width:260px">왔던 주문</button><br>
+    <button type="button" class="btn btn-success" style="margin-bottom:5px; width:260px" onClick="location='ORDERED.html'">했던 주문</button><br>
     <button type="button" class="btn btn-warning" style="margin-bottom:15px; width:260px">내 정보들</button><br>
     </div>
 <div class="wall" align="center">
