--- a/web/MAIN.html
+++ b/web/MAIN.html
@@ -72,6 +72,7 @@
       <div class="btn-group" role="group">
       <button type="button" class="alert-info" style="margin-right:5px">속도UP</button>
       <button type="button" class="alert-warning" style="margin-left:5px" onClick="location='SETTING.html'">설정하기</button>
+      <button type="button" class="alert-success" style="margin-left:5px" onClick="location='SETTING.html'">배송보기</button>
        </div>
       </ul>
     </div><br>
