--- a/web/ITEM_INFO.html
+++ b/web/ITEM_INFO.html
@@ -145,28 +145,28 @@ span.psw {
 
 </head>
 
-<body style="background-color:#E69B9C; width:100%; height:100%">
-<nav class="navbar navbar-inverse" style="border-color:#E69B9C">
-  <div class="container-fluid" style="background-color:#E69B9C">
+<body style="background-color:#FAF8EE">
+<nav class="navbar navbar-inverse" style="border-color:#FAF8EE; background-color:#FAF8EE">
+  <div class="container-fluid" style="background-color:#FAF8EE">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#inverseNavbar1" style="border-color:#ffffff"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-      <a class="navbar-brand" href="#" style="color:#FFFFFF; font-size:24px; text-align:center" onClick="location='ORDER.html'">주문으로...</a></div>
+    <div class="navbar-header" style="background-color: #69bd8d; border-color: #69bd8d;" >
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#inverseNavbar1" style="border-color:#fff; background-color:#69bd8d; column-rule-color:#69bd8d;"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+      <a class="navbar-brand" href="#" style="color:#fff; font-size:24px; text-align:center; margin-left:20px" onClick="location='MAIN.html'">전김강정조</a></div>
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="inverseNavbar1" align="center">
-      <ul class="nav navbar-nav navbar-right" style="border-color:#E69B9C">
+    <div class="collapse navbar-collapse" id="inverseNavbar1" align="center" style="background-color: #69BD8D; border-color: #FAF8EE; margin-top: -6px;">
+      <ul class="nav navbar-nav navbar-right" style="border-color: #FAF8EE; color: #69bd8d; margin-bottom: 12px;">
       <div class="btn-group" role="group">
       <button type="button" class="alert-info" style="margin-right:5px">속도UP</button>
       <button type="button" class="alert-warning" style="margin-left:5px" onClick="location='SETTING.html'">설정하기</button>
+      <button type="button" class="alert-success" style="margin-left:5px; background-color:#e9e4f0; border-color:#b9b5bf; color:#7129d3" onClick="location='SETTING.html'">배송보기</button>
        </div>
       </ul>
-    </div>
-
+</div>
     <!-- /.navbar-collapse -->
     
     <div align="center"><br>
     <label style="margin-right:10px">선택 항목을 장바구니에</label>
-    <button class="btn" style="color:#ffffff; background-color:rgba(1,208,203,1.00); border-color:rgba(1,208,203,1.00);width:auto" onclick="location='ORDER'">담기</button>
+    <button class="btn" style="color:#ffffff; background-color:#8A6C3B; color: #FCF8E3; border-color:#8A6C3B; width:auto" onclick="location='ORDER'.html">담기</button>
 
 
     </div>
@@ -367,40 +367,40 @@ function getTextByClone( tag ){
   <table id="cart" class="sortable" width="100%" border="0">
   	<thead>
     	<tr>
-    		<th class="check" style="text-align:center">체크<button class="btn" style="background-color:#E69B9C; font-size:10px; width:4px; padding-left:0px" onclick="reverseTD (0)">▲</button><button class="btn" onclick="reverseTD (0)" style="background-color: #E69B9C; font-size: 10px; width: 4px; padding-left: 0px;">▼</button></th>
-            <th class="name" style="text-align:center">이름<button class="btn" onclick="sortTD(1)" style="background-color:#E69B9C; font-size:10px; width:4px; padding-left:0px">▲</button><button class="btn" style="background-color:#E69B9C; font-size:10px; width:4px; padding-left:0px" onclick="reverseTD(1)">▼</button></th>
-             <th  class="company" style="text-align:center">회사<button class="btn" style="background-color:#E69B9C; font-size:10px; width:4px; padding-left:0px" onclick="sortTD(2)">▲</button><button class="btn" style="background-color:#E69B9C; font-size:10px; width:4px; padding-left:0px"  onclick="reverseTD(2)">▼</button></th>
+    		<th class="check" style="text-align:center">체크<button class="btn" style="background-color:#FAF8EE; font-size:10px; width:4px; padding-left:0px" onclick="reverseTD (0)">▲</button><button class="btn" onclick="reverseTD (0)" style="background-color: #FAF8EE; font-size: 10px; width: 4px; padding-left: 0px;">▼</button></th>
+            <th class="name" style="text-align:center">이름<button class="btn" onclick="sortTD(1)" style="background-color:#FAF8EE; font-size:10px; width:4px; padding-left:0px">▲</button><button class="btn" style="background-color:#FAF8EE; font-size:10px; width:4px; padding-left:0px" onclick="reverseTD(1)">▼</button></th>
+             <th  class="company" style="text-align:center">회사<button class="btn" style="background-color:#FAF8EE; font-size:10px; width:4px; padding-left:0px" onclick="sortTD(2)">▲</button><button class="btn" style="background-color:#FAF8EE; font-size:10px; width:4px; padding-left:0px"  onclick="reverseTD(2)">▼</button></th>
 			 <th class="number" style="text-align:center">갯수</th>
          </tr>
      </thead>
   <tbody>			
     <tr>
       <th scope="row" style="text-align:center"><input type="checkbox"></th>
-      <td style="text-align:center; background-color:rgba(230,155,156,1.00); border-color:rgba(230,155,156,1.00);width: auto" onClick="document.getElementById('id01').style.display='block'">치킨</td>
+      <td style="text-align:center; background-color:#FAF8EE; border-color:#FAF8EE;width: auto" onClick="document.getElementById('id01').style.display='block'">치킨</td>
       <td style="text-align:center">통큐</td>
       <td style="text-align:center"><input type="number" style="width:60px"></td>
     </tr>
     <tr>
       <th scope="row" style="text-align:center"><input type="checkbox"></th>
-      <td style="text-align:center; background-color:rgba(230,155,156,1.00); border-color:rgba(230,155,156,1.00);width: auto" onClick="document.getElementById('id01').style.display='block'">커피</td>
+      <td style="text-align:center; background-color:#FAF8EE; border-color:#FAF8EE;width: auto" onClick="document.getElementById('id01').style.display='block'">커피</td>
       <td style="text-align:center">하바나</td>
       <td style="text-align:center"><input type="number" style="width:60px"></td>
     </tr>
     <tr>
       <th scope="row" style="text-align:center"><input type="checkbox"></th>
-      <td style="text-align:center; background-color:rgba(230,155,156,1.00); border-color:rgba(230,155,156,1.00);width: auto" onClick="document.getElementById('id01').style.display='block'">감</td>
+      <td style="text-align:center; background-color:#FAF8EE; border-color:#FAF8EE;width: auto" onClick="document.getElementById('id01').style.display='block'">감</td>
       <td style="text-align:center">통큐</td>
       <td style="text-align:center"><input type="number" style="width:60px"></td>
     </tr>
     <tr>
       <th scope="row" style="text-align:center"><input type="checkbox"></th>
-      <td style="text-align:center; background-color:rgba(230,155,156,1.00); border-color:rgba(230,155,156,1.00);width: auto" onClick="document.getElementById('id01').style.display='block'">삼성앨쥐</td>
+      <td style="text-align:center; background-color:#FAF8EE; border-color:#FAF8EE;width: auto" onClick="document.getElementById('id01').style.display='block'">삼성앨쥐</td>
       <td style="text-align:center">하바나</td>
       <td style="text-align:center"><input type="number" style="width:60px"></td>
     </tr>
     <tr>
       <th scope="row" style="text-align:center"><input type="checkbox"></th>
-      <td style="text-align:center; background-color:rgba(230,155,156,1.00); border-color:rgba(230,155,156,1.00);width: auto" onClick="document.getElementById('id01').style.display='block'">애플짜응</td>
+      <td style="text-align:center; background-color:#FAF8EE; border-color:#FAF8EE;width: auto" onClick="document.getElementById('id01').style.display='block'">애플짜응</td>
       <td style="text-align:center">통큐</td>
       <td style="text-align:center"><input type="number" style="width:60px"></td>
     </tr>
@@ -545,7 +545,7 @@ window.onclick = function(event) {
  }
 </script>
 
-<footer class="footer" id="footer" align="right" style="color:#FFFFFF; margin-right:10px">Three J Two K company</footer>
+<footer class="footer" id="footer" align="right" style="color:#8ba0e8; margin-right:10px">Three J Two K company</footer>
 <script src="js/jquery-1.11.2.min.js" type="text/javascript"></script>
 <script src="js/bootstrap.js" type="text/javascript"></script>
 <script type="text/javascript">
