--- a/web/MAIN.html
+++ b/web/MAIN.html
@@ -59,16 +59,16 @@
 <![endif]-->
 </head>
 
-<body style="background-color:#E69B9C">
-<nav class="navbar navbar-inverse" style="border-color:#E69B9C">
-  <div class="container-fluid" style="background-color:#E69B9C">
+<body style="background-color:#FAF8EE">
+<nav class="navbar navbar-inverse" style="border-color:#FAF8EE">
+  <div class="container-fluid" style="background-color:#FAF8EE">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#inverseNavbar1" style="border-color:#ffffff"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-      <a class="navbar-brand" href="#" style="color:#FFFFFF; font-size:24px; text-align:center" onClick="location='MAIN.html'">전김강정조</a></div>
+    <div class="navbar-header" style="background-color:#69bd8d; border-color:#69bd8d" >
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#inverseNavbar1" style="border-color:#fff; background-color:#69bd8d; column-rule-color:#fff;"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+      <a class="navbar-brand" href="#" style="color:#fff; font-size:24px; text-align:center" onClick="location='MAIN.html'">전김강정조</a></div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="inverseNavbar1" align="center">
-      <ul class="nav navbar-nav navbar-right" style="border-color:#E69B9C">
+      <ul class="nav navbar-nav navbar-right" style="border-color:#FAF8EE; color:#69bd8d">
       <div class="btn-group" role="group">
       <button type="button" class="alert-info" style="margin-right:5px">속도UP</button>
       <button type="button" class="alert-warning" style="margin-left:5px" onClick="location='SETTING.html'">설정하기</button>
@@ -79,7 +79,6 @@
     <div align="center">
     <button type="button" class="btn btn-primary" style="margin-bottom:5px; width:260px" onClick="location='ORDER.html'">주문 하기</button><br>
     <button type="button" class="btn btn-info" style="margin-bottom:5px; width:260px">왔던 주문</button><br>
-    <button type="button" class="btn btn-success" style="margin-bottom:5px; width:260px" onClick="location='ORDERED.html'">했던 주문</button><br>
     <button type="button" class="btn btn-warning" style="margin-bottom:15px; width:260px">내 정보들</button><br>
     </div>
 <div class="wall" align="center">
@@ -134,7 +133,7 @@
     <script language="javascript"> </script>
 </div>
     <!-- /.navbar-collapse -->
-<form id="STATICMENU" style="background:#E69B9C; z-index:2">
+<form id="STATICMENU" style="background:none; z-index:2">
 <img src="icon/console.png" width="35" height="55" onclick="click_test()" alt=""/>
 </form>
 
@@ -233,7 +232,7 @@
   </div>
   <!-- /.container-fluid -->
 </nav>
-<footer class="footer" id="footer" align="right" style="color:#FFFFFF; margin-right:10px">Three J Two K company</footer>
+<footer class="footer" id="footer" align="right" style="color:#080924; margin-right:10px">Three J Two K company</footer>
 <script src="js/bootstrap.js" type="text/javascript"></script>
 </body>
 </html>
