--- a/web/MAIN.html
+++ b/web/MAIN.html
@@ -60,22 +60,22 @@
 </head>
 
 <body style="background-color:#FAF8EE">
-<nav class="navbar navbar-inverse" style="border-color:#FAF8EE">
+<nav class="navbar navbar-inverse" style="border-color:#FAF8EE; background-color:#FAF8EE">
   <div class="container-fluid" style="background-color:#FAF8EE">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header" style="background-color:#69bd8d; border-color:#69bd8d" >
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#inverseNavbar1" style="border-color:#fff; background-color:#69bd8d; column-rule-color:#fff;"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-      <a class="navbar-brand" href="#" style="color:#fff; font-size:24px; text-align:center" onClick="location='MAIN.html'">전김강정조</a></div>
+    <div class="navbar-header" style="background-color: #69bd8d; border-color: #69bd8d;" >
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#inverseNavbar1" style="border-color:#fff; background-color:#69bd8d; column-rule-color:#69bd8d;"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+      <a class="navbar-brand" href="#" style="color:#fff; font-size:24px; text-align:center; margin-left:20px" onClick="location='MAIN.html'">전김강정조</a></div>
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="inverseNavbar1" align="center">
-      <ul class="nav navbar-nav navbar-right" style="border-color:#FAF8EE; color:#69bd8d">
+    <div class="collapse navbar-collapse" id="inverseNavbar1" align="center" style="background-color: #69BD8D; border-color: #FAF8EE; margin-top: -6px;">
+      <ul class="nav navbar-nav navbar-right" style="border-color: #FAF8EE; color: #69bd8d; margin-bottom: 12px;">
       <div class="btn-group" role="group">
       <button type="button" class="alert-info" style="margin-right:5px">속도UP</button>
       <button type="button" class="alert-warning" style="margin-left:5px" onClick="location='SETTING.html'">설정하기</button>
-      <button type="button" class="alert-success" style="margin-left:5px" onClick="location='SETTING.html'">배송보기</button>
+      <button type="button" class="alert-success" style="margin-left:5px; background-color:#e9e4f0; border-color:#b9b5bf; color:#7129d3" onClick="location='SETTING.html'">배송보기</button>
        </div>
       </ul>
-    </div><br>
+</div><br>
     <div align="center">
     <button type="button" class="btn btn-primary" style="margin-bottom:5px; width:260px" onClick="location='ORDER.html'">주문 하기</button><br>
     <button type="button" class="btn btn-info" style="margin-bottom:5px; width:260px">왔던 주문</button><br>
