--- a/web/MAIN.html
+++ b/web/MAIN.html
@@ -72,7 +72,7 @@
       <div class="btn-group" role="group">
       <button type="button" class="alert-info" style="margin-right:5px">속도UP</button>
       <button type="button" class="alert-warning" style="margin-left:5px" onClick="location='SETTING.html'">설정하기</button>
-      <button type="button" class="alert-success" style="margin-left:5px; background-color:#e9e4f0; border-color:#b9b5bf; color:#7129d3" onClick="location='SETTING.html'">배송보기</button>
+      <button type="button" class="alert-success" style="margin-left:5px; background-color:#e9e4f0; border-color:#b9b5bf; color:#7129d3" onClick="location='ORDERED.html'">배송보기</button>
        </div>
       </ul>
 </div><br>
@@ -232,7 +232,7 @@
   </div>
   <!-- /.container-fluid -->
 </nav>
-<footer class="footer" id="footer" align="right" style="color:#080924; margin-right:10px">Three J Two K company</footer>
+<footer class="footer" id="footer" align="right" style="color:#8ba0e8; margin-right:10px">Three J Two K company</footer>
 <script src="js/bootstrap.js" type="text/javascript"></script>
 </body>
 </html>
