--- a/web/SETTING.html
+++ b/web/SETTING.html
@@ -5,8 +5,6 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, webkit">
 <title>Untitled Document</title>
-
-<link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/calendar.css">
     <style type="text/css">
         html {
@@ -50,7 +48,7 @@
 
 <script src="js/jquery-1.11.2.min.js" type="text/javascript"></script>
 <script src="js/calendar.js"></script>
-
+<link rel="stylesheet" href="css/style.css">
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -61,22 +59,24 @@
 <![endif]-->
 </head>
 
-<body style="background-color:#E69B9C">
-<nav class="navbar navbar-inverse" style="border-color:#E69B9C">
-  <div class="container-fluid" style="background-color:#E69B9C">
+<body style="background-color:#FAF8EE">
+<nav class="navbar navbar-inverse" style="border-color:#FAF8EE; background-color:#FAF8EE">
+  <div class="container-fluid" style="background-color:#FAF8EE">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#inverseNavbar1" style="border-color:#ffffff"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-      <a class="navbar-brand" href="#" style="color:#FFFFFF; font-size:24px; text-align:center" onClick="location='MAIN.html'">홈으로...</a></div>
+    <div class="navbar-header" style="background-color: #69bd8d; border-color: #69bd8d;" >
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#inverseNavbar1" style="border-color:#fff; background-color:#69bd8d; column-rule-color:#69bd8d;"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+       <a class="navbar-brand" href="#" style="color:#fff; font-size:24px; text-align:center; margin-left:20px; margin-top:-3px" onClick="location='MAIN.html'"><span class="glyphicon glyphicon-home" aria-hidden="true" style="margin-right:-10px">&nbsp;</span>홈으로...</a></div>
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="inverseNavbar1" align="center">
-      <ul class="nav navbar-nav navbar-right" style="border-color:#E69B9C">
+    <div class="collapse navbar-collapse" id="inverseNavbar1" align="center" style="background-color: #69BD8D; border-color: #FAF8EE; margin-top: -6px;">
+      <ul class="nav navbar-nav navbar-right" style="border-color: #FAF8EE; color: #69bd8d; margin-bottom: 12px;">
       <div class="btn-group" role="group">
       <button type="button" class="alert-info" style="margin-right:5px">속도UP</button>
-      <button type="button" class="alert-warning" style="margin-left:5px">설정하기</button>
+      <button type="button" class="alert-warning" style="margin-left:5px" onClick="location='SETTING.html'">설정하기</button>
+      <button type="button" class="alert-success" style="margin-left:5px; background-color:#e9e4f0; border-color:#b9b5bf; color:#7129d3" onClick="location='ORDERED.html'">배송보기</button>
        </div>
       </ul>
-    </div>
+</div>
+<br>
     <div align="center">
     <label style="margin-left: 10px; margin-right:100px; font-size:16px">리모콘 보기</label>
     <label class="switch" style="background-color:#000000">
@@ -317,7 +317,8 @@
  
 
 
-<footer class="footer" id="footer" align="right" style="color:#FFFFFF; margin-right:10px">Three J Two K company</footer>
+<footer class="footer" id="footer" align="right" style="color:#8ba0e8; margin-right:10px">Three J Two K company</footer>
 <!--- <script src="js/bootstrap.js" type="text/javascript"></script>   ----->
+<script src="js/bootstrap.js" type="text/javascript"></script>
 </body>
 </html>
