--- a/web/FAVmius.html
+++ b/web/FAVmius.html
@@ -51,7 +51,8 @@
         <div>
     <div align="center">
     <input type="search" placeholder="즐겨찾기 이름" style="text-align:center"/>
-    <button class="btn"  style="color:#ffffff; background-color:#BD934E; border-bottom-color:rgba(230,155,156,1.00)">검색하기</button><br>
+    <button class="btn"  style="color:#ffffff; background-color:#BD934E; border-bottom-color:rgba(230,155,156,1.00)">검색하기</button><br><br>
+     <label style="text-align:conter">해당 즐겨찾기 리스트</label>
     </div>
     
     <div class="tab-pane fade in active" id="LIST">
