--- a/web/FAVplus.html
+++ b/web/FAVplus.html
@@ -57,7 +57,8 @@
         <div>
     <div align="center">
     <input type="search" placeholder="즐겨찾기 이름" style="text-align:center"/>
-    <button class="btn"  style="color:#ffffff; background-color:#BD934E;">검색하기</button><br>
+    <button class="btn"  style="color:#ffffff; background-color:#BD934E;">검색하기</button><br><br>
+    <label style="text-align:conter">해당 즐겨찾기 리스트</label>
     </div>
     
     <div class="tab-pane fade in active" id="LIST">
