--- a/web/MAIN.html
+++ b/web/MAIN.html
@@ -78,8 +78,8 @@
 </div><br>
     <div align="center">
     <button type="button" class="btn btn-primary" style="margin-bottom:5px; width:260px" onClick="location='ORDER.html'">주문 하기</button><br>
-    <button type="button" class="btn btn-info" style="margin-bottom:5px; width:260px">왔던 주문</button><br>
-    <button type="button" class="btn btn-warning" style="margin-bottom:15px; width:260px">내 정보들</button><br>
+    <button type="button" class="btn btn-info" style="margin-bottom:5px; width:260px" onClick="location='ORDER_LIST.html'">왔던 주문</button><br>
+    <button type="button" class="btn btn-warning" style="margin-bottom:15px; width:260px" onClick="location='INVERNTORY.html'">내 정보들</button><br>
     </div>
 <div class="wall" align="center">
   <div id="ca"></div>
