--- a/2016_1/TJTK/WebContent/FAVmius.html
+++ b/2016_1/TJTK/WebContent/FAVmius.html
@@ -25,7 +25,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header" style="background-color: #69bd8d; border-color: #69bd8d;" >
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#inverseNavbar1" style="border-color:#fff; background-color:#69bd8d; column-rule-color:#69bd8d;"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-       <a class="navbar-brand" href="#" style="color:#fff; font-size:24px; text-align:center; margin-left:20px; margin-top:-3px" onClick="location='MAIN.html'"><span class="glyphicon glyphicon-credit-card" aria-hidden="true" style="margin-right:-10px">&nbsp;</span>주문으로...</a></div>
+       <a class="navbar-brand" href="#" style="color:#fff; font-size:24px; text-align:center; margin-left:20px; margin-top:-3px" onClick="location='ORDER.html'"><span class="glyphicon glyphicon-credit-card" aria-hidden="true" style="margin-right:-10px">&nbsp;</span>주문으로...</a></div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="inverseNavbar1" align="center" style="background-color: #69BD8D; border-color: #FAF8EE; margin-top: -6px;">
       <ul class="nav navbar-nav navbar-right" style="border-color: #FAF8EE; color: #69bd8d; margin-bottom: 12px;">
@@ -45,14 +45,14 @@
       <div class="input-group"><span class="input-group-addon">즐겨찾기 이름</span>
         <input type="text" class="form-control" placeholder="Write favorite group">
         <span class="input-group-addon" style="background-color:rgba(217,83,79,1.00)">
-        <button type="button" class="btn btn-danger" 
->삭제</button>
+        <button type="button" class="btn btn-danger" style="height: 100%; margin-left: -10px; margin-right: -10px; margin-bottom: -15px; margin-top: -18px; padding-bottom: 20px; font-size:12px; border-color:rgba(217,83,79,1.00);">삭제</button>
         </span></div>
         <hr>
         <div>
     <div align="center">
     <input type="search" placeholder="즐겨찾기 이름" style="text-align:center"/>
-    <button class="btn"  style="color:#ffffff; background-color:#BD934E; border-bottom-color:rgba(230,155,156,1.00)">검색하기</button><br>
+    <button class="btn"  style="color:#ffffff; background-color:#BD934E; border-bottom-color:rgba(230,155,156,1.00)">검색하기</button><br><br>
+     <label style="text-align:conter">해당 즐겨찾기 리스트</label>
     </div>
     
     <div class="tab-pane fade in active" id="LIST">
