--- a/2016_1/TJTK/무제 폴더/CAL_ORDER.html
+++ b/2016_1/TJTK/무제 폴더/CAL_ORDER.html
@@ -73,33 +73,33 @@ window.onload = function(){
 <script src="js/calendar.js"></script>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
 </head>
-<body style="background-color:#FAF8EE">
-<nav class="navbar navbar-inverse" style="border-color:#FAF8EE; background-color:#FAF8EE">
-  <div class="container-fluid" style="background-color:#FAF8EE">
+<body style="background-color:#E69B9C">
+<nav class="navbar navbar-inverse" style="border-color:#E69B9C">
+  <div class="container-fluid" style="background-color:#E69B9C">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header" style="background-color: #69bd8d; border-color: #69bd8d;" >
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#inverseNavbar1" style="border-color:#fff; background-color:#69bd8d; column-rule-color:#69bd8d;"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-      <a class="navbar-brand" href="#" style="color:#fff; font-size:24px; text-align:center; margin-left:20px; margin-top:-3px" onClick="location='MAIN.html'"><span class="glyphicon glyphicon-home" aria-hidden="true" style="margin-right:-10px">&nbsp;</span>홈으로...</a></div>
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#inverseNavbar1" style="border-color:#ffffff"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+      <a class="navbar-brand" href="#" style="color:#FFFFFF; font-size:24px; text-align:center" onClick="location='MAIN.html'">전김강정조</a></div>
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="inverseNavbar1" align="center" style="background-color: #69BD8D; border-color: #FAF8EE; margin-top: -6px;">
-      <ul class="nav navbar-nav navbar-right" style="border-color: #FAF8EE; color: #69bd8d; margin-bottom: 12px;">
-      <div class="btn-group" role="group">
-      <button type="button" class="alert-info" style="margin-right:5px">속도UP</button>
-      <button type="button" class="alert-warning" style="margin-left:5px" onClick="location='SETTING.html'">설정하기</button>
-      <button type="button" class="alert-success" style="margin-left:5px; background-color:#e9e4f0; border-color:#b9b5bf; color:#7129d3" onClick="location='ORDERED.html'">배송보기</button>
-       </div>
+    <div class="collapse navbar-collapse" id="inverseNavbar1" align="center">
+      <ul class="nav navbar-nav navbar-right" style="border-color:#E69B9C">
+        <div class="btn-group" role="group">
+          <button type="button" class="alert-info" style="margin-right:5px">속도UP</button>
+          <button type="button" class="alert-warning" style="margin-left:5px" onClick="location='SETTING.html'">설정하기</button>
+        </div>
       </ul>
-</div>
-<br>
-
-  <div align="center"><a href="#" class="button">◀</a> &nbsp;2016년 11월 19일 토요일&nbsp; <a href="#" class="button">▶</a></div>
+    </div>
+    <!-- /.navbar-collapse -->
+  </div>
+  <br>
+  <div align="center"><a href="#" class="button">◀</a> 2016년 11월 19일 토요일<a href="#" class="button">▶</a></div>
   <br>
   <div> </div>
   <div role="tabpanel">
     <ul class="nav nav-tabs" role="tablist">
-      <li role="presentation" class="active"><a href="#home1" data-toggle="tab" role="tab" aria-controls="tab1" style="color:#000000">주문 내역</a></li>
-      <li role="presentation"><a href="#paneTwo1" data-toggle="tab" role="tab" aria-controls="tab2" style="color:#000000">들어온주문</a></li>
-      <li role="presentation" class="dropdown"><a href="#" id="tabDropOne1" class="dropdown-toggle" data-toggle="dropdown" role="tab" aria-controls="tab3" aria-haspopup="true" aria-expanded="false" style="color:#000000">매출<span class="caret"></span></a>
+      <li role="presentation" class="active"><a href="#home1" data-toggle="tab" role="tab" aria-controls="tab1">주문내역</a></li>
+      <li role="presentation"><a href="#paneTwo1" data-toggle="tab" role="tab" aria-controls="tab2">들어온주문</a></li>
+      <li role="presentation" class="dropdown"><a href="#" id="tabDropOne1" class="dropdown-toggle" data-toggle="dropdown" role="tab" aria-controls="tab3" aria-haspopup="true" aria-expanded="false">매출<span class="caret"></span></a>
         <ul class="dropdown-menu" aria-labelledby="tabDropOne1">
           <li><a href="#tabDropDownOne1" tabindex="-1" data-toggle="tab">날짜별 매출보기</a></li>
           <li><a href="#tabDropDownTwo1" tabindex="-1" data-toggle="tab">월별 매출보기</a></li>
@@ -111,9 +111,9 @@ window.onload = function(){
         <!--여기에 선택한 날짜에 구매한 목록 회사별 테이블로 보여줌-->
         <div align="center"> <br>
           <div class="btn-group" role="group" >
-            <button type="button" class="btn btn-default" style="background-color:#E69B9C; color:#ffffff; margin-right:5px">바로주문하기</button>
+            <button type="button" class="btn btn-default">바로주문하기</button>
             <!-- 누르면 배송지 입력 페이지로 이동-->
-            <button type="button" class="btn btn-default" style="background-color:#69BD8D; color:#ffffff; margin-left:5px">추가주문하기</button>                        
+            <button type="button" class="btn btn-default">추가주문하기</button>                        
             <!-- 누르면 배송지 주문하기 페이지로 이동-->
 
             
@@ -121,12 +121,12 @@ window.onload = function(){
           <br>
         </div>
         <br>
-        <table align="center" width="100%" style="margin-bottom:10px">
+        <table align="center" width="100%">
           <thead>
             <tr>
-              <th id="check" style="text-align:center" width="30%">회사</th>
-              <th id="name" style="text-align:center" width="35%">이름 </th>
-              <th id="number" style="text-align:center" width="35%">갯수 </th>
+              <th id="check" style="text-align:center" width="35%">회사</th>
+              <th id="name" style="text-align:center" width="15%"> 이름 </th>
+              <th id="number" style="text-align:center" width="40%">갯수 </th>
             </tr>
           </thead>
         </table>
@@ -134,8 +134,9 @@ window.onload = function(){
           <table id="cart" class="sortable" width="100%" border="0">
             <tbody>
               <tr>
-                <th width="35%" style="text-align:left"> <input type="checkbox">
-                  <span>Apple</span></th>
+                <th width="35%" style="text-align:center"><input type="checkbox">
+                  <br>
+                  Apple</th>
                 <td><table width="100%">
                     <tr>
                       <td width="20%" style="text-align:center">mac</td>
@@ -156,9 +157,9 @@ window.onload = function(){
                   </table></td>
               </tr>
               <tr>
-                <th width="40%" style="text-align:left"> <input type="checkbox">
-                  <span>Samsung</span>
-                  </th>
+                <th width="40%" style="text-align:center"> <input type="checkbox">
+                  <br>
+                  Samsung</th>
                 <td><table width="100%">
                     <tr>
                       <td width="20%" style="text-align:center">galaxy</td>
@@ -179,9 +180,9 @@ window.onload = function(){
                   </table></td>
               </tr>
               <tr>
-                <th width="40%" style="text-align:left"> <input type="checkbox">
-                  <span>LG</span>
-                  </th>
+                <th width="40%" style="text-align:center"> <input type="checkbox">
+                  <br>
+                  LG</th>
                 <td><table width="100%">
                     <tr>
                       <td width="20%" style="text-align:center">opg</td>
@@ -202,9 +203,9 @@ window.onload = function(){
                   </table></td>
               </tr>
               <tr>
-                <th width="40%" style="text-align:left"> <input type="checkbox">
-                  <span>Google</span>
-                  </th>
+                <th width="40%" style="text-align:center"> <input type="checkbox">
+                  <br>
+                  Google</th>
                 <td><table width="100%">
                     <tr>
                       <td width="20%" style="text-align:center">android</td>
@@ -379,10 +380,9 @@ window.onload = function(){
 </div>
     </div>
   </div>
-  </div>
   <!-- /.container-fluid -->
 </nav>
-<footer class="footer" id="footer" align="right" style="color:#8ba0e8; margin-right:10px"><br>
+<footer class="footer" id="footer" align="right" style="color:#FFFFFF; margin-right:10px"><br>
   Three J Two K company</footer>
 <script src="js/bootstrap.js" type="text/javascript"></script>
 </body>
