--- a/web/ITEM_INFO.html
+++ b/web/ITEM_INFO.html
@@ -555,4 +555,4 @@ function sortTD( index ){    replace.ascending( index );    }
 function reverseTD( index ){    replace.descending( index );    } 
 </script>
 </body>
-</html>>
+</html>
