배송버튼 삭제 / 각div명시 / setting버튼 / 인벤토리하나로

--- a/web/INVENTORY.html
+++ b/web/INVENTORY.html
@@ -219,7 +219,7 @@ function getTextByClone( tag ){
 } 
 </script>
       <div>
-      <label style="margin-bottom:15px">내가 가진 물건들</label>
+      <label style="margin-bottom:15px">내가 보유한 것들</label>
       </div>
       <table id="cart" class="sortable" style="width:100%; height:320px; overflow:auto; " border="0"  align="center">
   	<thead>
