--- a/2016_1/TJTK/WebContent/CAL_ORDER.html
+++ b/2016_1/TJTK/WebContent/CAL_ORDER.html
@@ -124,9 +124,9 @@ window.onload = function(){
         <table align="center" width="100%" style="margin-bottom:10px">
           <thead>
             <tr>
-              <th id="check" style="text-align:center" width="30%">회사</th>
-              <th id="name" style="text-align:center" width="35%">이름 </th>
-              <th id="number" style="text-align:center" width="35%">갯수 </th>
+              <th id="check" style="text-align:center" width="40%">회사<button class="btn" onclick="sortTD(0)" style="background-color:#FAF8EE; font-size:10px; width:4px; padding-left:0px">▲</button><button class="btn" style="background-color:#FAF8EE; font-size:10px; width:4px; padding-left:0px" onclick="reverseTD(0)">▼</button></th>
+              <th id="name" style="text-align:center" width="30%">이름<button class="btn" onclick="sortTD(1)" style="background-color:#FAF8EE; font-size:10px; width:4px; padding-left:0px">▲</button><button class="btn" style="background-color:#FAF8EE; font-size:10px; width:4px; padding-left:0px" onclick="reverseTD(1)">▼</button> </th>
+              <th id="number" style="text-align:center" width="30%">갯수<button class="btn" onclick="sortTD(2)" style="background-color:#FAF8EE; font-size:10px; width:4px; padding-left:0px">▲</button><button class="btn" style="background-color:#FAF8EE; font-size:10px; width:4px; padding-left:0px" onclick="reverseTD(2)">▼</button> </th>
             </tr>
           </thead>
         </table>
@@ -134,12 +134,12 @@ window.onload = function(){
           <table id="cart" class="sortable" width="100%" border="0">
             <tbody>
               <tr>
-                <th width="35%" style="text-align:left"> <input type="checkbox">
+                <th width="%" style="text-align:center"> <input type="checkbox"><br>
                   <span>Apple</span></th>
                 <td><table width="100%">
                     <tr>
-                      <td width="20%" style="text-align:center">mac</td>
-                      <td width="40%" style="text-align:center"><input type="number" style="width:60px"></td>
+                      <td width="50%" style="text-align:center">mac</td>
+                      <td width="50%" style="text-align:center"><input type="number" style="width:60px"></td>
                     </tr>
                     <tr>
                       <td width="20%" style="text-align:center">mac</td>
@@ -156,13 +156,13 @@ window.onload = function(){
                   </table></td>
               </tr>
               <tr>
-                <th width="40%" style="text-align:left"> <input type="checkbox">
+                <th width="35%" style="text-align:center"> <input type="checkbox"><br>
                   <span>Samsung</span>
                   </th>
                 <td><table width="100%">
                     <tr>
-                      <td width="20%" style="text-align:center">galaxy</td>
-                      <td width="40%" style="text-align:center"><input type="number" style="width:60px"></td>
+                      <td width="50%" style="text-align:center">galaxy</td>
+                      <td width="50%" style="text-align:center"><input type="number" style="width:60px"></td>
                     </tr>
                     <tr>
                       <td width="20%" style="text-align:center">galaxy</td>
@@ -179,13 +179,13 @@ window.onload = function(){
                   </table></td>
               </tr>
               <tr>
-                <th width="40%" style="text-align:left"> <input type="checkbox">
+                <th width="35%" style="text-align:center"> <input type="checkbox"><br>
                   <span>LG</span>
                   </th>
                 <td><table width="100%">
                     <tr>
-                      <td width="20%" style="text-align:center">opg</td>
-                      <td width="40%" style="text-align:center"><input type="number" style="width:60px"></td>
+                      <td width="50%" style="text-align:center">opg</td>
+                      <td width="50%" style="text-align:center"><input type="number" style="width:60px"></td>
                     </tr>
                     <tr>
                       <td width="20%" style="text-align:center">opg</td>
@@ -202,13 +202,13 @@ window.onload = function(){
                   </table></td>
               </tr>
               <tr>
-                <th width="40%" style="text-align:left"> <input type="checkbox">
+                <th width="35%" style="text-align:center"> <input type="checkbox"><br>
                   <span>Google</span>
                   </th>
                 <td><table width="100%">
                     <tr>
-                      <td width="20%" style="text-align:center">android</td>
-                      <td width="40%" style="text-align:center"><input type="number" style="width:60px"></td>
+                      <td width="50%" style="text-align:center">android</td>
+                      <td width="50%" style="text-align:center"><input type="number" style="width:60px"></td>
                     </tr>
                     <tr>
                       <td width="20%" style="text-align:center">android</td>
@@ -384,6 +384,185 @@ window.onload = function(){
 </nav>
 <footer class="footer" id="footer" align="right" style="color:#8ba0e8; margin-right:10px"><br>
   Three J Two K company</footer>
+ <script type="text/javascript">
+
+function sortingNumber( a , b ){  
+
+        if ( typeof a == "number" && typeof b == "number" ) return a - b; 
+
+        // 천단위 쉼표와 공백문자만 삭제하기.  
+        var a = ( a + "" ).replace( /[,\s\xA0]+/g , "" ); 
+        var b = ( b + "" ).replace( /[,\s\xA0]+/g , "" ); 
+
+        var numA = parseFloat( a ) + ""; 
+        var numB = parseFloat( b ) + ""; 
+
+        if ( numA == "NaN" || numB == "NaN" || a != numA || b != numB ) return false; 
+
+        return parseFloat( a ) - parseFloat( b ); 
+} 
+
+
+/* changeForSorting() : 문자열 바꾸기. */ 
+
+function changeForSorting( first , second ){  
+
+        // 문자열의 복사본 만들기. 
+        var a = first.toString().replace( /[\s\xA0]+/g , " " ); 
+        var b = second.toString().replace( /[\s\xA0]+/g , " " ); 
+
+        var change = { first : a, second : b }; 
+
+        if ( a.search( /\d/ ) < 0 || b.search( /\d/ ) < 0 || a.length == 0 || b.length == 0 ) return change; 
+
+        var regExp = /(\d),(\d)/g; // 천단위 쉼표를 찾기 위한 정규식. 
+
+        a = a.replace( regExp , "$1" + "$2" ); 
+        b = b.replace( regExp , "$1" + "$2" ); 
+
+        var unit = 0; 
+        var aNb = a + " " + b; 
+        var numbers = aNb.match( /\d+/g ); // 문자열에 들어있는 숫자 찾기 
+
+        for ( var x = 0; x < numbers.length; x++ ){ 
+
+                var length = numbers[ x ].length; 
+                if ( unit < length ) unit = length; 
+        } 
+
+        var addZero = function( string ){ // 숫자들의 단위 맞추기 
+
+                var match = string.match( /^0+/ ); 
+
+                if ( string.length == unit ) return ( match == null ) ? string : match + string; 
+
+                var zero = "0"; 
+
+                for ( var x = string.length; x < unit; x++ ) string = zero + string; 
+
+                return ( match == null ) ? string : match + string; 
+        }; 
+
+        change.first = a.replace( /\d+/g, addZero ); 
+        change.second = b.replace( /\d+/g, addZero ); 
+
+        return change; 
+} 
+
+
+/* byLocale() */ 
+
+function byLocale(){ 
+
+        var compare = function( a , b ){ 
+
+                var sorting = sortingNumber( a , b ); 
+
+                if ( typeof sorting == "number" ) return sorting; 
+
+                var change = changeForSorting( a , b ); 
+
+                var a = change.first; 
+                var b = change.second; 
+
+                return a.localeCompare( b ); 
+        }; 
+
+        var ascendingOrder = function( a , b ){  return compare( a , b );  }; 
+        var descendingOrder = function( a , b ){  return compare( b , a );  }; 
+
+        return { ascending : ascendingOrder, descending : descendingOrder }; 
+} 
+
+
+/* replacement() */ 
+ 
+function replacement( parent ){  
+        var tagName = parent.tagName.toLowerCase(); 
+        if ( tagName == "table" ) parent = parent.tBodies[ 0 ]; 
+        tagName = parent.tagName.toLowerCase(); 
+        if ( tagName == "tbody" ) var children = parent.rows; 
+        else var children = parent.getElementsByTagName( "li" ); 
+
+        var replace = { 
+                order : byLocale(), 
+                index : false, 
+                array : function(){ 
+                        var array = [ ]; 
+                        for ( var x = 0; x < children.length; x++ ) array[ x ] = children[ x ]; 
+                        return array; 
+                }(), 
+                checkIndex : function( index ){ 
+                        if ( index ) this.index = parseInt( index, 10 ); 
+                        var tagName = parent.tagName.toLowerCase(); 
+                        if ( tagName == "tbody" && ! index ) this.index = 0; 
+                }, 
+                getText : function( child ){ 
+                        if ( this.index ) child = child.cells[ this.index ]; 
+                        return getTextByClone( child ); 
+                }, 
+                setChildren : function(){ 
+                        var array = this.array; 
+                        while ( parent.hasChildNodes() ) parent.removeChild( parent.firstChild ); 
+                        for ( var x = 0; x < array.length; x++ ) parent.appendChild( array[ x ] ); 
+                }, 
+                ascending : function( index ){ // 오름차순 
+                        this.checkIndex( index ); 
+                        var _self = this; 
+                        var order = this.order; 
+                        var ascending = function( a, b ){ 
+                                var a = _self.getText( a ); 
+                                var b = _self.getText( b ); 
+                                return order.ascending( a, b ); 
+                        }; 
+                        this.array.sort( ascending ); 
+                        this.setChildren(); 
+                }, 
+                descending : function( index ){ // 내림차순
+                        this.checkIndex( index ); 
+                        var _self = this; 
+                        var order = this.order; 
+                        var descending = function( a, b ){ 
+                                var a = _self.getText( a ); 
+                                var b = _self.getText( b ); 
+                                return order.descending( a, b ); 
+                        }; 
+                        this.array.sort( descending ); 
+                        this.setChildren(); 
+                } 
+        }; 
+        return replace; 
+} 
+
+function getTextByClone( tag ){  
+        var clone = tag.cloneNode( true ); // 태그의 복사본 만들기. 
+        var br = clone.getElementsByTagName( "br" ); 
+        while ( br[0] ){ 
+                var blank = document.createTextNode( " " ); 
+                clone.insertBefore( blank , br[0] ); 
+                clone.removeChild( br[0] ); 
+        } 
+        var isBlock = function( tag ){ 
+                var display = ""; 
+                if ( window.getComputedStyle ) display = window.getComputedStyle ( tag, "" )[ "display" ]; 
+                else display = tag.currentStyle[ "display" ]; 
+                return ( display == "block" ) ? true : false; 
+        }; 
+        var children = clone.getElementsByTagName( "*" ); 
+        for ( var x = 0; x < children.length; x++){ 
+                var child = children[ x ]; 
+                if ( ! ("value" in child) && isBlock(child) ) child.innerHTML = child.innerHTML + " "; 
+        } 
+        var textContent = clone.textContent || clone.innerText; 
+        return textContent; 
+} 
+</script>
+<script src="js/jquery-1.11.2.min.js" type="text/javascript"></script>
 <script src="js/bootstrap.js" type="text/javascript"></script>
+<script type="text/javascript">
+var myTable = document.getElementById( "cart" ); 
+function sortTD( index ){    replacement(myTable).ascending( index );    } 
+function reverseTD( index ){    replacement(myTable).descending( index );    } 
+</script>
 </body>
 </html>
