--- a/2016_1/TJTK/WebContent/ORDER.html
+++ b/2016_1/TJTK/WebContent/ORDER.html
@@ -70,7 +70,7 @@
       <strong><button class="btn" style="color:#8A6C3B; background-color:#FAF8EE; font-size:15px; margin-bottom:8px" onClick="ITEM_INFO.html">검색하기</button></strong>
     <strong><button class="btn" style="color:#8A6C3B; background-color:#FAF8EE; font-size:15px; margin-bottom:8px" onClick="location='ACCEPT_1.html'">결재하기</button></strong><br>
     </div>
-     
+     <div id ="Shopping_Cart" style="width:100%; height:320px; overflow:auto" align="center">
     
    
 <!------ TABLE SORTING javascript -- start -->    
@@ -249,24 +249,21 @@ function getTextByClone( tag ){
 </script>
   <!------ TABLE SORTING javascript -- end -->    
   
-  <table width="100%">
+  <table id="cart" class="sortable" width="100%" border="0">
   	<thead>
     	<tr>
-        <th class="check" style="text-align:center; width:25%;">상태<button class="btn" style="background-color:#FAF8EE; font-size:10px; width:4px; padding-left:0px" onclick="sortTD (0)">▲</button><button class="btn" onclick="reverseTD (0)" style="background-color:#FAF8EE; font-size: 10px; width: 4px; padding-left: 0px;">▼</button></th>
-            <th class="name" style="text-align:center; width:25%;">이름<button class="btn" onclick="sortTD(1)" style="background-color:#FAF8EE; font-size:10px; width:4px; padding-left:0px">▲</button><button class="btn" style="background-color:#FAF8EE; font-size:10px; width:4px; padding-left:0px" onclick="reverseTD(1)">▼</button></th>
-             <th  class="company" style="text-align:center; width:25%;">회사<button class="btn" style="background-color:#FAF8EE; font-size:10px; width:4px; padding-left:0px" onclick="sortTD(2)">▲</button><button class="btn" style="background-color:#FAF8EE; font-size:10px; width:4px; padding-left:0px"  onclick="reverseTD(2)">▼</button></th>
-			 <th class="number" style="text-align:center; width:25%;">갯수<button class="btn" style="background-color:#FAF8EE; font-size:10px; width:4px; padding-left:0px" onclick="sortTD(3)">▲</button><button class="btn" style="background-color:#FAF8EE; font-size:10px; width:4px; padding-left:0px"  onclick="reverseTD(3)">▼</button></th>
+        <th class="check" style="text-align:center">상태<button class="btn" style="background-color:#FAF8EE; font-size:10px; width:4px; padding-left:0px" onclick="sortTD (0)">▲</button><button class="btn" onclick="reverseTD (0)" style="background-color:#FAF8EE; font-size: 10px; width: 4px; padding-left: 0px;">▼</button></th>
+            <th class="name" style="text-align:center">이름<button class="btn" onclick="sortTD(1)" style="background-color:#FAF8EE; font-size:10px; width:4px; padding-left:0px">▲</button><button class="btn" style="background-color:#FAF8EE; font-size:10px; width:4px; padding-left:0px" onclick="reverseTD(1)">▼</button></th>
+             <th  class="company" style="text-align:center">회사<button class="btn" style="background-color:#FAF8EE; font-size:10px; width:4px; padding-left:0px" onclick="sortTD(2)">▲</button><button class="btn" style="background-color:#FAF8EE; font-size:10px; width:4px; padding-left:0px"  onclick="reverseTD(2)">▼</button></th>
+			 <th class="number" style="text-align:center">갯수<button class="btn" style="background-color:#FAF8EE; font-size:10px; width:4px; padding-left:0px" onclick="sortTD(3)">▲</button><button class="btn" style="background-color:#FAF8EE; font-size:10px; width:4px; padding-left:0px"  onclick="reverseTD(3)">▼</button></th>
          </tr>
      </thead>
-     </table>
-     <div id ="Shopping_Cart" style="width:100%; height:320px; overflow:auto" align="center">
-     <table id="cart" class="sortable" width="100%" border="0">
   <tbody>
     <tr>
-      <th scope="row" style="text-align:center; width:25%;"><input type="checkbox"></th>
-      <td style="text-align:center; width:25%;">감</td>
-      <td style="text-align:center; width:25%;">통큐</td>
-      <td style="text-align:center; width:25%;"><input type="number" style="width:60px"></td>
+      <th scope="row" style="text-align:center"><input type="checkbox"></th>
+      <td style="text-align:center">감</td>
+      <td style="text-align:center">통큐</td>
+      <td style="text-align:center"><input type="number" style="width:60px"></td>
     </tr>
     <tr>
       <th scope="row" style="text-align:center"><input type="checkbox"></th>
