--- a/2016_1/TJTK/WebContent/MAIN.html
+++ b/2016_1/TJTK/WebContent/MAIN.html
@@ -1,4 +1,3 @@
-<!-- djafkdja -->
 <!doctype html>
 <html>
 <head>
@@ -60,7 +59,7 @@
 <![endif]-->
 </head>
 
-<body id="mybody" style="background-color:#FAF8EE" height="100%">
+<body style="background-color:#FAF8EE">
 <nav class="navbar navbar-inverse" style="border-color:#FAF8EE; background-color:#FAF8EE">
   <div class="container-fluid" style="background-color:#FAF8EE">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -72,7 +71,7 @@
       <ul class="nav navbar-nav navbar-right" style="border-color: #FAF8EE; color: #69bd8d; margin-bottom: 12px;">
       <div class="btn-group" role="group">
       <button type="button" class="alert-info" style="margin-right:5px">속도UP</button>
-      <button type="button" class="alert-warning" style="margin-left:5px" onClick="location='SETTING.html'">설정하기</button> 
+      <button type="button" class="alert-warning" style="margin-left:5px" onClick="location='SETTING.html'">설정하기</button>
      <!-- <button type="button" class="alert-success" style="margin-left:5px; background-color:#e9e4f0; border-color:#b9b5bf; color:#7129d3" onClick="location='ORDERED.html'">배송보기</button> -->
        </div>
       </ul>
@@ -152,7 +151,6 @@
  var stmnScrollSpeed = 20; //스크롤 속도 (클수록 느림)
  var stmnTimer; 
  var flag = 0;
- var win_height;//현재 창 높이 받기
  
  function RefreshStaticMenu() { 
   var stmnStartPoint, stmnEndPoint; 
@@ -239,7 +237,6 @@
   </div>
   <!-- /.container-fluid -->
 </nav>
-
 <footer class="footer" id="footer" align="right" style="color:#8ba0e8; margin-right:10px">Three J Two K company</footer>
 <script src="js/bootstrap.js" type="text/javascript"></script>
 </body>
