--- a/2016_1/TJTK/WebContent/INVENTORY.html
+++ b/2016_1/TJTK/WebContent/INVENTORY.html
@@ -221,7 +221,7 @@ function getTextByClone( tag ){
 
        
 
-    <table id="cart" class="sortable" style="width:100%; height:320px; overflow:auto; " border="0"  align="center">
+    <table class="sortable" style="width:100%; height:320px; overflow:auto; " border="0"  align="center">
   	<thead>
     	<tr>
             <th class="name" style="text-align:center; width:20%">이름<button class="btn" onclick="sortTD(0)" style="background-color:#FAF8EE; font-size:10px; width:4px; padding-left:0px">▲</button><button class="btn" style="background-color:#FAF8EE; font-size:10px; width:4px; padding-left:0px" onclick="reverseTD(0)">▼</button></th>
@@ -240,7 +240,7 @@ function getTextByClone( tag ){
       <td style="text-align:center">땅땅치킨</td>
       <td style="text-align:center">통큐</td>
       <td style="text-align:center"><input type="number" style="width:60px" value="1"></td>
-      <td style="text-align:center"><input type="number" style="width:60px">2</td>
+      <td style="text-align:center"><input type="number" style="width:60px"></td>
       <td style="text-align:center"><button class="btn btn-block" onclick="" style="background-color:#E69B9C; margin-bottom:5px; width:60px; color:#fff">+Box</button></td>
 </tr>
       <td style="text-align:center; width:20%">땅땅치킨</td>
