--- a/2016_1/TJTK/WebContent/ITEM_INFO.html
+++ b/2016_1/TJTK/WebContent/ITEM_INFO.html
@@ -363,7 +363,7 @@ function getTextByClone( tag ){
   <!------ TABLE SORTING javascript -- end -->  
       
       
-  <table id="cart" class="sortable" width="100%" border="0">
+  <table class="sortable" width="100%" border="0">
   	<thead>
     	<tr>
     		<th class="check" style="text-align:center; width:25%" >체크<button class="btn" style="background-color:#FAF8EE; font-size:10px; width:4px; padding-left:0px" onclick="reverseTD (0)">▲</button><button class="btn" onclick="reverseTD (0)" style="background-color: #FAF8EE; font-size: 10px; width: 4px; padding-left: 0px;">▼</button></th>
@@ -648,4 +648,4 @@ function sortTD( index ){    replace.ascending( index );    }
 function reverseTD( index ){    replace.descending( index );    } 
 </script>
 </body>
-</html>>>
+</html>>>>
